force-app/main/default/objects/Quote/fields/Account_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Status__c</fullName>
    <formula>( Opportunity.Account.Inactive__c || Opportunity.Account.On_Hold__c || Opportunity.Account.Parent.Inactive__c || Opportunity.Account.Parent.On_Hold__c )</formula>
    <label>Account Credit Status</label>
    <type>Checkbox</type>
</CustomField>