force-app/main/default/objects/Quote/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <formula>Opportunity.Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>