force-app/main/default/objects/Quote/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>CASE( Quote_Location__c , 
&quot;Markham&quot;, &quot;555 Alden Rd&quot; &amp; BR() &amp; &quot;Markham, ON L3R 3L5&quot; &amp; BR() &amp; &quot;Tel: 905-946-1711&quot; &amp; BR() &amp; &quot;Fax: 905-946-1715&quot;, 
&quot;London&quot;, &quot;15 Charterhouse Crescent&quot; &amp; BR() &amp; &quot;London, ON N5W 5V3&quot; &amp; BR() &amp; &quot;Tel: 519-471-6512&quot; &amp; BR() &amp; &quot;Fax: 519-471-7095&quot;, 
&quot;Ottawa&quot;,&quot;2855 Unit 150 Swansea Cres&quot; &amp; BR() &amp; &quot;Ottawa, ON K1G 3L6&quot; &amp; BR() &amp; &quot;Tel: 613-741-0370&quot; &amp; BR() &amp; &quot;Fax: 613-741-0386&quot;, 
&quot;Brossard&quot;,&quot;9655, rue Ignace, Suite L&quot; &amp; BR() &amp; &quot;Brossard, QC, J4Y 2P3&quot; &amp; BR() &amp; &quot;Tel: 450-444-5152&quot; &amp; BR() &amp; &quot;Fax: 450-444-1778&quot;, 
&quot;Quebec&quot;,&quot;650 boul. Pere-Lelievre bureau 140&quot; &amp; BR() &amp; &quot;Quebec, QC, G1M 3T2&quot; &amp; BR() &amp; &quot;Tel: 418-621-5885&quot; &amp; BR() &amp; &quot;Fax: 418-621-0979&quot;, 
&quot;Trois Rivières&quot;, &quot;7680, Notre-Dame Ouest&quot; &amp; BR() &amp; &quot;Trois Rivières, QC, G9B 1L9&quot; &amp; BR() &amp; &quot;Tel: 819-377-2332&quot; &amp; BR() &amp; &quot;Fax: 819-377-5841&quot;, 
&quot;Vancouver&quot;, &quot;3751 North Fraser Way, Unit 12&quot; &amp; BR() &amp; &quot;Burnaby, BC V5J 5G4&quot; &amp; BR() &amp; &quot;Tel: 800-849-3596&quot; &amp; BR() &amp; &quot;Fax: 604-327-4477&quot;, 
&quot;Calgary&quot;, &quot;Bay F 7703 30 Street SE&quot; &amp; BR() &amp; &quot;Calgary, AB T2C 1V4&quot; &amp; BR() &amp; &quot;Tel: 403-686-6999&quot; &amp; BR() &amp; &quot;Fax: 403-246-1621&quot;, 
&quot;Edmonton&quot;, &quot;4403 82nd Avenue NW&quot; &amp; BR() &amp; &quot;Edmonton, AB T6B 2L9&quot; &amp; BR() &amp; &quot;Tel: 800-849-3596&quot; &amp; BR() &amp; &quot;Fax: 403-246-1621&quot;, 
&quot;Location&quot;)</formula>
    <label>Issued From</label>
    <type>Text</type>
</CustomField>