force-app/main/default/objects/Quote/fields/Adresse_De_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Adresse_De_Facturation__c</fullName>
    <formula>BillingName &amp; BR() &amp;
BillingStreet  &amp; BR() &amp;
BillingCity  &amp; BR() &amp;
BillingState &amp; BR() &amp;
BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de Facturation</label>
    <type>Text</type>
</CustomField>