force-app/main/default/objects/Quote/fields/Adresse_De_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_De_Livraison__c</fullName>
    <formula>ShippingName &amp; BR() &amp;
ShippingStreet  &amp; BR() &amp;
ShippingCity   &amp; BR() &amp;
ShippingState  &amp; BR() &amp;
ShippingPostalCode</formula>
    <label>Adresse de Livraison</label>
    <type>Text</type>
</CustomField>