force-app/main/default/objects/Quote/fields/Applicable_T_C_s__c.field-meta.xml
<CustomField>
    <fullName>Applicable_T_C_s__c</fullName>
    <label>Applicable T&amp;C&apos;s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>