force-app/main/default/objects/Quote/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Status field that is updated as per the Approval Process</description>
    <inlineHelpText>Indicates whether the Discount Percentage is approved or rejected</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Approval Not Required</fullName>
                <isActive>false</isActive>
                <label>Approval Not Required</label>
            </value>
            <value>
                <fullName>Recalled</fullName>
                <isActive>false</isActive>
                <label>Recalled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>