force-app/main/default/objects/Quote/fields/Bill_To_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Suite_Number__c</fullName>
    <label>Bill To Suite Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>