force-app/main/default/objects/Quote/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <formula>Contact.Email</formula>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>