force-app/main/default/objects/Quote/fields/CPQ_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Approval_Status__c</fullName>
    <formula>IF(IsSyncing, Opportunity.CPQ2_Approval_Status_Text__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>