force-app/main/default/objects/Quote/fields/CPQ_Hygiene_Deal_Score__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Hygiene_Deal_Score__c</fullName>
    <formula>IF( IsSyncing ,   Opportunity.CPQ_Hygiene_Deal_Score__c  , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hygiene - Deal Score</label>
    <type>Text</type>
</CustomField>