force-app/main/default/objects/Quote/fields/CPQ_Reasons_for_Required_Approval__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Reasons_for_Required_Approval__c</fullName>
    <formula>IF( IsSyncing , Opportunity.CPQ_Reasons_for_Required_Approval__c , &apos;&apos;)</formula>
    <label>Reasons for Required Approval</label>
    <type>Text</type>
</CustomField>