force-app/main/default/objects/Quote/fields/Date_D_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Date_D_Expiration__c</fullName>
    <formula>ExpirationDate</formula>
    <label>Date d&apos;expiration</label>
    <type>Date</type>
</CustomField>