force-app/main/default/objects/Quote/fields/Date_de_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Creation__c</fullName>
    <formula>CreatedDate</formula>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>