force-app/main/default/objects/Quote/fields/Display_T_C_Equipment_Rental_Ware_Wash__c.field-meta.xml
<CustomField>
    <fullName>Display_T_C_Equipment_Rental_Ware_Wash__c</fullName>
    <formula>IF(Hide_T_C_s__c = False &amp;&amp; T_C_Equipment_Rental_Ware_Wash__c &gt; 0, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the T&amp;C Equipment Rental (Ware Wash) Agreement if &quot;Hide T&amp;C&apos;s&quot; is not checked on the Conga Quote document</inlineHelpText>
    <label>Display T&amp;C Equipment Rental (Ware Wash)</label>
    <type>Text</type>
</CustomField>