force-app/main/default/objects/Quote/fields/Display_T_C_Hygiene_Service_Continued__c.field-meta.xml
<CustomField>
    <fullName>Display_T_C_Hygiene_Service_Continued__c</fullName>
    <description>This field is used in the template</description>
    <formula>IF(Hide_T_C_s__c = false &amp;&amp;  T_C_Hygiene_Service_Continued__c &gt; 0, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display T&amp;C Hygiene Service Continued</label>
    <type>Text</type>
</CustomField>