force-app/main/default/objects/Quote/fields/Display_T_C_Hygiene_Services__c.field-meta.xml
<CustomField>
    <fullName>Display_T_C_Hygiene_Services__c</fullName>
    <description>Displays the T&amp;C Hygiene Services Agreement if &quot;Hide T&amp;C&apos;s&quot; is not checked on the Conga Quote document</description>
    <formula>IF(Hide_T_C_s__c = False &amp;&amp; T_C_Hygiene_Services__c &gt; 0, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display T&amp;C Hygiene Services</label>
    <type>Text</type>
</CustomField>