force-app/main/default/objects/Quote/fields/Display_T_C_Payment__c.field-meta.xml
<CustomField>
    <fullName>Display_T_C_Payment__c</fullName>
    <description>Displays the Payment Terms if &quot;Hide T&amp;C&apos;s&quot; is not checked on the Conga Quote document and any Quote Line Items include an agreement.</description>
    <formula>IF(
OR(
Display_T_C_Dispenser_Agreement__c = &quot;Y&quot;,
Display_T_C_Equipment_Maintenance__c = &quot;Y&quot;,
Display_T_C_Equipment_Rental_Ware_Wash__c = &quot;Y&quot;,
Display_T_C_Equipment_Rental_Washroom_A__c = &quot;Y&quot;,
Display_T_C_Hygiene_Services__c = &quot;Y&quot;,
Display_T_C_Pest_Control_Service__c = &quot;Y&quot;
),
&quot;Y&quot;,
&quot;N&quot;
)</formula>
    <label>Display T&amp;C Payment</label>
    <type>Text</type>
</CustomField>