force-app/main/default/objects/Quote/fields/Display_T_C_Saniplus_Covid__c.field-meta.xml
<CustomField>
    <fullName>Display_T_C_Saniplus_Covid__c</fullName>
    <formula>IF( Hide_T_C_s__c = False  &amp;&amp;  T_C_Saniplus_Covid__c  &gt; 0, &quot;Y&quot;, &quot;N&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display T&amp;C Saniplus Covid</label>
    <type>Text</type>
</CustomField>