force-app/main/default/objects/Quote/fields/DocuSign_Subject__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Subject__c</fullName>
    <description>Merges the following to be used as the email subject for Quotes sent via DocuSign:
&apos;Citron Hygiene Documents for your DocuSign Signature - ACCOUNT ACCPAC OR QUOTE NUMBER - ACCOUNT NAME - QUOTE NAME&apos;</description>
    <formula>LEFT(&apos;Citron Hygiene Documents for your DocuSign Signature - &apos; + 
IF(
ISBLANK(Opportunity.Account.AccPac_Account__c),
QuoteNumber, 
Opportunity.Account.AccPac_Account__c) + &quot; - &quot; +
Opportunity.Account.Name + &quot; - &quot; + Name,
100)</formula>
    <label>DocuSign Subject</label>
    <type>Text</type>
</CustomField>