force-app/main/default/objects/Quote/fields/HasChemicalEquipment__c.field-meta.xml
<CustomField>
    <fullName>HasChemicalEquipment__c</fullName>
    <formula>INCLUDES(Applicable_T_C_s__c,&apos;4&apos;)</formula>
    <label>HasChemicalEquipment</label>
    <type>Checkbox</type>
</CustomField>