force-app/main/default/objects/Quote/fields/HasSaniEquipmentRental__c.field-meta.xml
<CustomField>
    <fullName>HasSaniEquipmentRental__c</fullName>
    <formula>IF(
  AND(
    INCLUDES(Applicable_T_C_s__c,&apos;4&apos;),
    Hide_T_C_s__c = False
  ) || ((T_C_Equipment_Rental_Ware_Wash__c &gt; 0) &amp;&amp; Hide_T_C_s__c = False)
 ,
  &quot;Y&quot;,
  &quot;N&quot;
)</formula>
    <label>HasSaniEquipmentRental</label>
    <type>Text</type>
</CustomField>