force-app/main/default/objects/Quote/fields/Hide_T_C_s__c.field-meta.xml
<CustomField>
    <fullName>Hide_T_C_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide T&amp;C&apos;s</label>
    <type>Checkbox</type>
</CustomField>