force-app/main/default/objects/Quote/fields/Language_Preference__c.field-meta.xml
<CustomField>
    <fullName>Language_Preference__c</fullName>
    <formula>Opportunity.Language_Preference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Language Preference</label>
    <type>Text</type>
</CustomField>