force-app/main/default/objects/Quote/fields/Maximum_Line_Item_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Line_Item_Discount__c</fullName>
    <label>Maximum Line Item Discount</label>
    <summarizedField>QuoteLineItem.Discount</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>