force-app/main/default/objects/Quote/fields/Minimum_Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Service_Amount__c</fullName>
    <defaultValue>300</defaultValue>
    <inlineHelpText>Per service period</inlineHelpText>
    <label>Minimum Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>