force-app/main/default/objects/Quote/fields/Numero_de_soumission__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_soumission__c</fullName>
    <formula>QuoteNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de soumission</label>
    <type>Text</type>
</CustomField>