force-app/main/default/objects/Quote/fields/Opportunity_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_of_Business__c</fullName>
    <formula>TEXT( Opportunity.Opportunity_Type__c )</formula>
    <label>Opportunity Line of Business</label>
    <type>Text</type>
</CustomField>