force-app/main/default/objects/Quote/fields/Opportunity_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_ID__c</fullName>
    <formula>CASESAFEID(Opportunity.OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner ID</label>
    <type>Text</type>
</CustomField>