force-app/main/default/objects/Quote/fields/PDF_Extract__c.field-meta.xml
<CustomField>
    <fullName>PDF_Extract__c</fullName>
    <formula>TEXT(Opportunity.PDF_Extract__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Extract</label>
    <type>Text</type>
</CustomField>