force-app/main/default/objects/Quote/fields/Prepare_Par__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Par__c</fullName>
    <formula>$User.FirstName &amp;&quot; &quot; &amp; $User.LastName</formula>
    <label>Préparé par</label>
    <type>Text</type>
</CustomField>