force-app/main/default/objects/Quote/fields/Prepare_Par_Email__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Par_Email__c</fullName>
    <formula>$User.Email</formula>
    <label>Courriel</label>
    <type>Text</type>
</CustomField>