force-app/main/default/objects/Quote/fields/Prepare_Pour__c.field-meta.xml
<CustomField>
    <fullName>Prepare_Pour__c</fullName>
    <formula>Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName</formula>
    <label>Préparé pour</label>
    <type>Text</type>
</CustomField>