force-app/main/default/objects/Quote/fields/Prepare_pour_telephone__c.field-meta.xml
<CustomField>
    <fullName>Prepare_pour_telephone__c</fullName>
    <formula>Contact.Phone</formula>
    <label>Téléphone</label>
    <type>Text</type>
</CustomField>