force-app/main/default/objects/Quote/fields/Quote_Location__c.field-meta.xml
<CustomField>
    <fullName>Quote_Location__c</fullName>
    <label>Quote Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Markham</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Ottawa</fullName>
            </value>
            <value>
                <fullName>Brossard</fullName>
            </value>
            <value>
                <fullName>Quebec</fullName>
            </value>
            <value>
                <fullName>Trois Rivières</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
            <value>
                <fullName>Edmonton</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>