force-app/main/default/objects/Quote/fields/Quote_With_Annual_Totals__c.field-meta.xml
<CustomField>
    <fullName>Quote_With_Annual_Totals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote With Annual Totals</label>
    <type>Checkbox</type>
</CustomField>