force-app/main/default/objects/Quote/fields/Ship_To_Suite_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Suite_Number__c</fullName>
    <label>Ship To Suite Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>