force-app/main/default/objects/Quote/fields/T_C_Equipment_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Maintenance__c</fullName>
    <inlineHelpText>Indicates if Quote PDF Requires Equipment Maintenance Agreement Terms and Conditions</inlineHelpText>
    <label>T&amp;C Equipment Maintenance</label>
    <summaryFilterItems>
        <field>QuoteLineItem.T_C_Equipment_Maintenance__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>