force-app/main/default/objects/Quote/fields/T_C_Equipment_Rental_Ware_Wash__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Rental_Ware_Wash__c</fullName>
    <inlineHelpText>Indicates if Quote PDF requires Equipment Rental Agreement (Ware-Wash) Terms and Conditions</inlineHelpText>
    <label>T&amp;C Equipment Rental (Ware Wash)</label>
    <summaryFilterItems>
        <field>QuoteLineItem.T_C_Equipment_Rental_Ware_Wash__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>