force-app/main/default/objects/Quote/fields/T_C_Equipment_Rental_Washroom_Auto__c.field-meta.xml
<CustomField>
    <fullName>T_C_Equipment_Rental_Washroom_Auto__c</fullName>
    <inlineHelpText>Indicates if Quote PDF requires Equipment Rental Agreement (Washroom Automation &amp; First Aid) Terms and Conditions</inlineHelpText>
    <label>T&amp;C Equipment Rental (Washroom Auto)</label>
    <summaryFilterItems>
        <field>QuoteLineItem.T_C_Equipment_Rental_Washroom_Auto__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>