force-app/main/default/objects/Quote/fields/T_C_Hygiene_Service_Continued__c.field-meta.xml
<CustomField>
    <fullName>T_C_Hygiene_Service_Continued__c</fullName>
    <inlineHelpText>Indicates if Quote PDF requires T&amp;C Hygiene Service Continued T&amp;C</inlineHelpText>
    <label>T&amp;C Hygiene Service Continued</label>
    <summaryFilterItems>
        <field>QuoteLineItem.T_C_Hygiene_Service_Continued__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>