force-app/main/default/objects/Quote/fields/Tax_Percent__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percent__c</fullName>
    <inlineHelpText>Input the tax percent here and the tax will automatically be calculated. (Only input non Quebec tax percent here)</inlineHelpText>
    <label>Tax Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>