force-app/main/default/objects/Quote/fields/Term_Length_Hygiene_PEST__c.field-meta.xml
<CustomField>
    <fullName>Term_Length_Hygiene_PEST__c</fullName>
    <label>Term Length (Hygiene/PEST)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>