force-app/main/default/objects/Quote/fields/Total_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Revenue__c</fullName>
    <label>Total Monthly Revenue</label>
    <summarizedField>QuoteLineItem.Total_Monthly_Revenue__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>