force-app/main/default/objects/Quote/fields/TPS__c.field-meta.xml
<CustomField>
    <fullName>TPS__c</fullName>
    <formula>Subtotal * 0.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>