force-app/main/default/objects/Quote/fields/TVQ__c.field-meta.xml
<CustomField>
    <fullName>TVQ__c</fullName>
    <formula>Subtotal * 0.09975</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TVQ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>